testing on windows

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,9 @@
       "messagesUpdate",
       "messagesTagsList",
       "messagesTags",
-      "accountsRead"
+      "accountsRead",
+      "downloads",
+      "storage"
     ],
   
     "background": {
